refactoring and added a new web page for providing client configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./data/www:/usr/share/nginx/html
       - ./data/secret-configs:/usr/share/secret-configs:ro
       - ./config/nginx:/etc/nginx/vhost.d:ro
+      - ./config/nginx/conf.d:/etc/nginx/conf.d:ro
     environment:
       - DEFAULT_HOST=${DOMAIN:-example.com}
       - TRUST_DOWNSTREAM_PROXY=false
